src/objects/Feedback__c.object
<CustomObject>
    <fields>
        <fullName>Feedback__c</fullName>
        <label>Feedback</label>
        <length>32768</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>Questionnaire__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Questionnaire</label>
        <referenceTo>Questionaire__c</referenceTo>
        <relationshipLabel>Feedbacks</relationshipLabel>
        <relationshipName>Feedbacks</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Trainee__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Trainee</label>
        <referenceTo>Trainee__c</referenceTo>
        <relationshipLabel>Feedbacks</relationshipLabel>
        <relationshipName>Feedbacks</relationshipName>
        <type>Lookup</type>
    </fields>
    <label>Feedback</label>
    <nameField>
        <label>Feedback Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>Feedbacks</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>